--- a/camagru/src/style/scss/Footer.scss
+++ b/camagru/src/style/scss/Footer.scss
@@ -1,37 +1,24 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
 footer{
-    height: 100px;
     width: 100%;
+    height: 100px;
     background-color: black;
+    color: white;
     position: absolute;
     bottom: 0;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    .links_route{
-        ul{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            li{
-                list-style: none;
-            }
-        }
-    }
-    .links_images{
-        ul{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            li{
-                list-style: none;
+    justify-content: space-around;
+    ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        li{
+            margin: 20px;
+            list-style: none;
+            text-decoration: none;
+            a:hover{
+                text-decoration: underline;
             }
         }
     }
